k8s/base/shared/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefixes
spec:
  stripPrefix:
    prefixes:
      - /api
      - /ai

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-namespace-strip-prefixes@kubernetescrd

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - j13a103.p.ssafy.io
      secretName: main-tls
  rules:
    - host: j13a103.p.ssafy.io
      http:
        paths:
          # Backend API
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80

          # AI API
          - path: /ai
            pathType: Prefix
            backend:
              service:
                name: ai-service
                port:
                  number: 80
